Wed Nov 29 00:08:23 2000  J"orn Rennecke <amylaar@redhat.com>

	* jump.c (delete_insn): Check that REG_LABEL note actually contains
	a CODE_LABEL.

2000-11-28  Neil Booth  <neilb@earthling.net>

        * c-common.h: Remove flag_digraphs.
        * c-decl.c: Remove flag_digraphs.  
        (c_decode_option): Don't set it. 
        * c-lex.c (init_c_lex): Don't do anything for digraphs.

2000-11-28  Richard Henderson  <rth@redhat.com>

	* c-parse.in (finish_parse): Update for parse_in type change.
	(_yylex): Likewise.

2000-11-28  Neil Booth  <neilb@earthling.net>

        * cppmacro.c (cpp_scan_buffer_nooutput): Take a boolean
        indicating whether to scan all buffers on the stack or
        just one.
        * cppinit.c (do_includes): Update.
        * cppmain.c (main): Update.
        * cpplib.h: Update prototype.

2000-11-28  Richard Henderson  <rth@redhat.com>

	* genoutput.c (validate_insn_operands): New.
	(gen_insn): Call it.

	* config/alpha/alpha.md (divmodsi_internal): Renumber operands.
	(divmoddi_internal): Likewise.
	* config/arm/arm.md (andsi3_compare0_scratch): Likewise.
	* config/i960/i960.md (branch patterns): Likewise.
	* config/ia64/ia64.md (tbit_and_0): Likewise.
	(tbit_and_1, tbit_or_0, tbit_or_1): Likewise.
	* config/m68k/m68k.md (zero_extract memory patterns): Likewise.
	* config/mips/mips.md (divmodsi4_internal): Likewise.
	(divmoddi4_internal): Likewise.
	* config/rs6000/rs6000.md (call patterns): Likewise.
	* config/sh/sh.md (movsi_y): Likewise.
	* config/sparc/sparc.md: Comment out if 0 v8p shift pattern.

2000-11-28  Richard Henderson  <rth@redhat.com>

	* config.gcc: Kill residual pyramid support.

2000-11-28  Neil Booth  <neilb@earthling.net>

	* c-lex.h (parse_in): Change parse_in to a cpp_reader *.
	* c-decl.c (c_decode_option): Update to match.
	* c-lex.c (init_c_lex, yyparse): Update to match.
	* c-lang.c (lang_init_options): Use cpp_create_reader.
	* cppinit.c (cpp_init): Rename initialize.